# django-assets

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  Workbench.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
connectors/marketdata/: GRADER.md  README.md  pyproject.toml
connectors/marketdata/src/django_assets_prices_marketdata/: __init__.py  calendar.py  client.py  mapping.py  source.py
connectors/marketdata/tests/: conftest.py  fake_vendor.py  test_client.py  test_conformance.py  test_mapping.py  test_source.py
connectors/marketdata/tests/fixtures/live/: _meta.json  markets_status.json  options_chain_probe.json  options_quotes_ancient.json  options_quotes_series.json  options_quotes_single.json  stocks_candles_ancient_probe.json  stocks_candles_daily.json  stocks_candles_unknown.json  stocks_candles_weekly_native.json  stocks_prices_spy.json  stocks_quotes_bulk.json  stocks_quotes_spy.json  stocks_quotes_unknown.json  user.json
connectors/marketdata/verify/: conftest.py  live_alive.py  live_differential.py  probe_live.py
dev_project/: urls.py  wsgi.py
dev_project/hostapp/: apps.py  schemas.py
dev_project/optiontracker/: GAPS.md  apps.py  services.py  urls.py  views.py
dev_project/settings/: base.py  dev.py  test.py
django_assets/: __init__.py  admin.py  apps.py  conf.py  models.py  serializers.py  viewsets.py
django_assets/brokerage/: accounts.py  admin.py  checkpoints.py  dedup.py  disclosure.py  exceptions.py  imports.py  matching.py  models.py  reconciliation.py  review.py  templates.py
django_assets/core/: admin.py  builder.py  checks.py  ddl.py  exceptions.py  income.py  intake.py  measure.py  models.py  prices.py  prices_conformance.py  queries.py  resolver.py
django_assets/instruments/: admin.py  base.py  exceptions.py  models.py  tags.py
django_assets/lots/: admin.py  fx.py  links.py  models.py  queries.py  rebuild.py  reports.py  signals.py
django_assets/migrations/: 0001_initial.py  0002_add_transaction_and_leg.py  0003_ddl_dec_domains.py  0004_ddl_assert_transaction_balanced.py  0005_ddl_transaction_legs_balanced.py  0006_add_model_corporateaction_currencymeta_cryptometa.py  0007_add_model_equitymeta.py  0008_add_model_optionmeta_deliverable.py  0009_add_model_accountprofile.py  0010_add_import_management.py  0011_add_model_importlineproposal.py  0012_add_model_disclosureevent.py  0013_add_model_trade_tradeallocation.py  0014_ddl_trade_allocations_within_leg.py  0015_add_model_tagcategory_tag.py  0016_add_model_virtualtransfer_virtualentry.py  0017_ddl_virtual_entries_balanced.py  0018_add_lots_models.py  0019_ddl_lot_conservation.py  0020_stale_scope_no_db_constraint.py  0021_add_model_corporateactionproposal.py  0022_add_model_tradeproposal.py
django_assets/test/: test_app_shell.py
django_assets/trades/: admin.py  detection.py  exceptions.py  models.py  queries.py  reports.py  virtual.py
docs/adr/: 0001-postgres-only.md  0002-postgres-12-minimum.md  0003-django-42-minimum.md  0004-ddl-install-hybrid.md  0005-account-single-owner.md  0006-account-cascade-on-user-delete.md  0007-portfolio-as-query.md  0008-auth-user-model-reference.md  0009-instrument-identity-model.md  0010-option-contract-model.md  (+21 more)
prompts/: GOAL.md
scripts/: bench_bulk_import.py  bench_dedup.py  check_app_thinness.py  check_import_direction.py  import_artifacts.py  verify_ddl_modes.py
(+211 files in other folders)
