[project]
name = "django-assets"
version = "0.1.0.dev0"
description = "Precise storage & arithmetic for currencies, crypto, equities, options, futures, bonds, and indices in Django / PostgreSQL."
requires-python = ">=3.12"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
authors = [{ name = "django-assets contributors" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "Django>=4.2,<6.0",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
drf = ["djangorestframework>=3.14,<4.0"]

[dependency-groups]
dev = [
    # Test
    "pytest==7.4.4",
    "pytest-django==4.8.0",
    "pytest-xdist==3.6.1",
    "pytest-cov==5.0.0",
    "freezegun==1.5.1",
    "coverage==7.5.0",
    # DRF surface tests (the drf extra mirrors this pin)
    "djangorestframework>=3.14,<4.0",
    # Lint / type-check
    "ruff>=0.15.9",
    "mypy>=1.13",
    "django-stubs>=5.1",
    "djangorestframework-stubs>=3.15",
    # Pre-commit
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["django_assets"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
]
ignore = [
    "E501", # line too long — delegated to the formatter
]

[tool.ruff.lint.isort]
known-first-party = ["django_assets"]

[tool.mypy]
python_version = "3.12"
files = ["django_assets"]
strict = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "dev_project.settings.test"

# Migrations: autogenerated boilerplate, hand-written SQL ops.
[[tool.mypy.overrides]]
module = "*.migrations.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disable_error_code = ["misc", "no-untyped-call"]

# Admin: ModelAdmin.list_display accepts strings naming methods — untypeable.
[[tool.mypy.overrides]]
module = "*.admin"
ignore_errors = true

# drf-spectacular is optional and has no stubs requirement here.
[[tool.mypy.overrides]]
module = "drf_spectacular.*"
ignore_missing_imports = true

# Test code is not type-checked; correctness comes from the tests passing.
[[tool.mypy.overrides]]
module = "*.test.*"
ignore_errors = true
