[project]
name = "django-assets-prices-marketdata"
version = "0.1.0.dev0"
description = "MarketData.app PriceSource connector for django-assets (ADR-0039 v2 contract): equities + options quotes, greeks/IV, bounded history."
requires-python = ">=3.12"
license = "AGPL-3.0-only"
authors = [{ name = "django-assets contributors" }]
dependencies = [
    "django-assets",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/django_assets_prices_marketdata"]

[tool.uv.sources]
django-assets = { workspace = true }
